Bug 1752649 - Use GetInFlowParent when retrieving language to be used for quote marks from the element's context. r=dholbert

Differential Revision: https://phabricator.services.mozilla.com/D137384